--- a/package.json
+++ b/package.json
@@ -6,27 +6,27 @@
   "main": "src/index.tsx",
   "dependencies": {
     "bootstrap": "5.1.3",
-    "chart.js": "3.7.1",
+    "chart.js": "4.1.1",
     "cors": "^2.8.5",
-    "express": "^4.17.3",
+    "express": "^4.18.2",
     "lodash": "^4.17.21",
     "lodash-es": "^4.17.21",
     "nanoid": "3.3.1",
-    "react": "17.0.2",
-    "react-bootstrap": "2.1.2",
-    "react-chartjs-2": "4.0.1",
-    "react-dom": "17.0.2",
-    "react-router-dom": "^6.2.2",
-    "react-scripts": "4.0.3",
+    "react": "^18.2.0",
+    "react-bootstrap": "2.7.0",
+    "react-chartjs-2": "5.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.8.0",
+    "react-scripts": "^5.0.1",
     "socket.io": "^4.4.1",
-    "socket.io-client": "4.4.1"
+    "socket.io-client": "^4.5.4"
   },
   "devDependencies": {
-    "@types/lodash": "^4.14.179",
+    "@types/lodash": "^4.14.191",
     "@types/lodash-es": "^4.17.6",
     "@types/react": "17.0.20",
-    "@types/react-dom": "17.0.9",
-    "typescript": "4.4.2"
+    "@types/react-dom": "^18.0.10",
+    "typescript": "4.9.5"
   },
   "scripts": {
     "start": "PORT=5000 react-scripts start",
