--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,7 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "noEmit": true
+    "noEmit": true,
+    "downlevelIteration": true
   }
 }
